Added icons for home project section

--- a/index.html
+++ b/index.html
@@ -62,57 +62,62 @@
         <h1>Featured Projects </h1>
         <div id = "project-list">
           <a href="javascript:void(0);" class="project" id="closetshare" onclick="toClosetShare()">
-            <img id="closet-picture" src="resources/closetshare.png" alt="closetshare title slide">
+            <img id="closet-picture" class = "project-image" src="resources/closetshare.png" alt="closetshare title slide">
             <div class="project-right">
               <div class="project-title">
                 <h2>ClosetShare</h2>
                 <p>/2024</p>
               </div>
               <p>A cross-platform social app developed using React Native that helps and encourages users to improve their own fashion sense, find their own unique style, and form fashion communities.</p>
+              <div class = "project-select-icon"></div>
             </div>
           </a> <!--closetshare-->
 
           <a href="javascript:void(0);" class="project" id="wealthsimple" onclick="toWealthsimple()">
-            <img id="closet-picture" src="resources/wealthsimple.png" alt="wealthsimple title slide">
+            <img id="closet-picture" class = "project-image"  src="resources/wealthsimple.png" alt="wealthsimple title slide">
             <div class="project-right">
               <div class="project-title">
                 <h2>Wealthsimple Redesign Proposal</h2>
                 <p>/2024</p>
               </div>
               <p>A number of redesigns and proposed new features for the investing app Wealthsimple based on extensive HCI research. With the objective to encourage and support youth to invest early by reducing cognitive load throughout the app experience.</p>
+              <div class = "project-select-icon"></div>
             </div>
           </a> <!--wealthsimple-->
 
           <a href="javascript:void(0);" class="project" id="craftconnect" onclick="toCraftConnect()">
-            <img id="craft-picture" src="resources/craftconnect.png" alt="craftconnect title slide">
+            <img id="craft-picture" class = "project-image"  src="resources/craftconnect.png" alt="craftconnect title slide">
             <div class="project-right">
               <div class="project-title">
                 <h2>CraftConnect</h2>
                 <p>/2024</p>
               </div>
               <p>Design aim to help artisans find and retain their unique customer base, a web platform concept that allows handcraft consumers to discover and connect with local artisans they like.</p>
+              <div class = "project-select-icon"></div>
             </div>
           </a> <!-- craftconnect -->
           
           <a href="javascript:void(0);" class="project" id="rabbitat" onclick="toRabbitat()">
-            <img id="rabbitat-picture" src="resources/rabbitat.png" alt="rabbitat poster picture">
+            <img id="rabbitat-picture" class = "project-image"  src="resources/rabbitat.png" alt="rabbitat poster picture">
             <div class="project-right">
               <div class="project-title">
                 <h2>Rabbitats Website Redesign</h2>
                 <p>/2023</p>
               </div>
               <p>Strategy to improve the organization website for the rabbit rescue society Rabbitats. This project demonstrates proper problem framing given constraints, and proper brainstormed solutions based on user and client research. As well as slide deck design.</p>
+              <div class = "project-select-icon"></div>
             </div>
           </a> <!-- rabbitat -->
           
           <a href="javascript:void(0);" class="project" id="macaron" onclick="toMacaron()">
-            <img id="macaron-picture" src="resources/macaron.png" alt="screenshot of the macaron website">
+            <img id="macaron-picture" class = "project-image"  src="resources/macaron.png" alt="screenshot of the macaron website">
             <div class="project-right">
               <div class="project-title">
                 <h2>Macaron</h2>
                 <p>/2024</p>
               </div>
               <p>A brand and website created from scratch. The website aim to provide a seamingless and satisfying macaron purchase experience, while preserving its visual identity. Latest standout project where I've put my programming skills into use.</p>
+              <div class = "project-select-icon"></div>
             </div>
           </a> <!-- macaron -->
 
