Edited some page and added section animation

--- a/closetshare.html
+++ b/closetshare.html
@@ -176,7 +176,7 @@
 
     <!--------------------------DESIGN PROCESS AND ITERATIONS //-------------------------------------------------->
     <section id = "design-process-and-iterations">
-      <h1>App Concept Ideation </h1>
+      <h1>Design Process and Iterations </h1>
 
       <!-- part 1 -->
       <div id = "closetshare-sketches" class="sub-section">
@@ -214,17 +214,17 @@
           <div>
             <h2>App Stylings</h2>
             <p>
-              For the app’s font and color choices, my partner and I aimed to create an elegant and luxurious atmosphere, but still 
-              welcoming enough for the general audience.
+              For the app’s font and color choices, my partner and I aimed to create an <strong>elegant and luxurious atmosphere</strong>, but still 
+              <strong>welcoming</strong> enough for the general audience.
             </p>
             <p>
-              For these purposes, I proposed using a vibrant purple, a color that often represents luxury and royalty, as the app’s 
-              highlight color. At the same time, keep the rest of the app visuals neutral and subtle to help push the outfit pictures 
+              For these purposes, I proposed using a <strong>vibrant purple</strong>, a color that often represents luxury and royalty, as the app’s 
+              highlight color. At the same time, keep the <strong>rest of the app visuals neutral and subtle</strong> to help push the outfit pictures 
               as primary focuses. 
             </p>
             <p>
-              For typography, I selected Poppins for titles and Nunito for body text and captions. The fonts help conveys a sense of 
-              elegance and clarity, while still feeling friendly and minimalistic, complementing the visual identity that we had 
+              For typography, I selected <strong>Poppins for titles and Nunito for body text and captions</strong>. The fonts help conveys a sense of 
+              <strong>elegance and clarity, while still feeling friendly and minimalistic</strong>, complementing the visual identity that we had 
               envisioned.
             </p>
           </div>
@@ -396,7 +396,7 @@
     <section id = "key-reflections">
     <h1>Key Reflections</h1>
     <div class = "sub-section">
-      <h2>Being able to <strong>adapt</strong> as Issues Emerge is Key</h2>
+      <h2><strong>Adaption</strong> is Key</h2>
       <p>
         While it is important to lay out development plans as well as set deadline and goals early on, these plans will likely need to be 
         adjusted as issues emerge. Therefore, being <strong>able to adapt the plan and development process to navigate around and resolve these 
@@ -411,7 +411,7 @@
     </div>
 
     <div class = "sub-section">
-      <h2>Seemingly Easy Design Choices Might be harder to Implement than Expected</h2>
+      <h2>Design choice vs implementation </h2>
       <div id = "closetshare-reflection-B-content" class = "grid-area">
         <div>
           <p>
