--- a/craftconnect.html
+++ b/craftconnect.html
@@ -101,23 +101,20 @@
         </div><!-- right side -->
       </div><!-- end of brief -->
 
-      <div id = "craftconnect-topic-context" class = "highlight-area grid-area">
-        <div>
-          <h2 class = "highlight-area-title">Topic Context</h2>
-          <p>Our target stakeholders are small independent artisans based in Metro Vancouver selling small handmade artisan crafts. </p>
-          <p>
-            Secondary research have supported that artisans in the handmade craft business faces problems such as currently earning below-average revenue and 
-            having a volatile source of income. Consequently, it is difficult to transform a small handmade craft business into a successful,  livable career.
-          </p>
-        </div>
-        <img id = "craftconnect-shelf" src="resources/craftconnect/craft shop shelf.png" alt="a shelf of handcrafted merchandises"></img>
-      </div>
-
     </section>
 
     <!--------------------------FINAL CONCEPT OVERVIEW //-------------------------------------------------->
     <section id = "final-concept-overview">
       <h1>Final Prototype Overview </h1>
+
+      <div id = "craftconnect-topic-context" class = "highlight-area sub-section">
+        <h2 class = "center-heading-with-line">Topic Context </h2>
+        <p>
+          Secondary research have supported that Vancouver based small independent artisans in the handmade craft business faces problems such as currently earning below-average revenue and 
+          having a volatile source of income. Consequently, it is difficult to transform a small handmade craft business into a successful,  livable career.
+        </p>
+      </div>
+
       <p>
         <strong>CraftConnect</strong> is a proposed web platform that allows handcraft consumers to <strong>learn about, connect, and support their local artisans through various 
         interactive features</strong> such as a map overview of nearby artisan shops, and an interactive booth page with customized notes sent to artisans, news boards,
@@ -179,6 +176,25 @@
       <div id = "craftconnect-research-notes-container" class = "image-with-caption">
         <img id = "craftconnect-research-cnotes" src="resources/craftconnect/research notes.png" alt="research notes for our field research"></img>
         <figcaption> Part of our collection of notes gather from primary field research</figcaption>
+      </div>
+
+      <div class = "sub-section highlight-area">
+        <p>
+          Based on these research, we've also brainstormed possible points of Intervention using journey maps, from both artisan and customer perspectives, and in both
+          shop and market settings. 
+        </p>
+      </div>
+
+      <div id = "craftconnect-journey-maps">
+        <div id = "craftconnect-journey-map-shop" class = "image-with-caption">
+          <img src="resources/craftconnect/craftconnect journey map shop.png" alt="research notes for our field research"></img>
+          <figcaption> Journey map for shops.</figcaption>
+        </div>
+  
+        <div id = "craftconnect-journey-map-market" class = "image-with-caption">
+          <img src="resources/craftconnect/craftconnect journey map market.png" alt="research notes for our field research"></img>
+          <figcaption> Journey map for markets.</figcaption>
+        </div>
       </div>
       
     </section>
