--- a/macaron.html
+++ b/macaron.html
@@ -107,7 +107,7 @@
     <!--------------------------FINAL WEBSITE HIGHLIGHTS //-------------------------------------------------->
     <section id = "final-website-highlights">
       <h1>Final Website Highlights </h1>
-      <div id = "macaron-final-website-highlight-image-container" class = "highlight-area">
+      <div id = "macaron-final-website-highlight-image-container">
       </div>  
 
       <div id = "macaron-share-prototype" class = "grid-area highlight-area ">
