--- a/rabbitats.html
+++ b/rabbitats.html
@@ -246,15 +246,17 @@
           <figcaption>Nearly all educational content are packed into a sigular PDF file, making pinpointing specific informaiton difficult.</figcaption>
         </div>
         <div id="rabbitats-second-issue-content" class = "grid-area">
-          <span class="number-title">02</span>
-          <div> <!-- for the text-->
-            <h2>User-unfriendly education page</h2>
-            <p>On Rabbitat’s education page, the educational content comes in a pdf file format, requiring users to exit the website and read 
-              through 50 pages of hard to digest content. The page also includes a singular video from Rabbitat’s YouTube channel and two 
-              downloadable pdf files.</p>
-            <p>The <strong>form in which the content comes in is insufficient and not user friendly</strong>, and does not promote ease of access 
-              for prospective readers. The information being external to the website <strong>harms the site’s overall cohesiveness and increases the 
-              barrier for information retrieval</strong>. This design has also make it extremely difficult for prospective users to access or search for specific content.</p>
+          <div class = "numbered-title-section">
+            <span class="number-title">02</span>
+            <div> <!-- for the text-->
+              <h2>User-unfriendly education page</h2>
+              <p>On Rabbitat’s education page, the educational content comes in a pdf file format, requiring users to exit the website and read 
+                through 50 pages of hard to digest content. The page also includes a singular video from Rabbitat’s YouTube channel and two 
+                downloadable pdf files.</p>
+              <p>The <strong>form in which the content comes in is insufficient and not user friendly</strong>, and does not promote ease of access 
+                for prospective readers. The information being external to the website <strong>harms the site’s overall cohesiveness and increases the 
+                barrier for information retrieval</strong>. This design has also make it extremely difficult for prospective users to access or search for specific content.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -295,29 +297,38 @@
       <div id = "rabbitats-first-improvement" class="sub-section">
         <div class = "numbered-title-section">
           <span class="number-title">01</span>
-          <h2>Modifying certain elements of the webpage and reinventing the hierarchy to make the education section stand out more for users, encouraging further exploration.</h2>
+          <div>
+             <h2>Reinventing the hierarchy</h2>
+            <p>
+              Modifying certain elements of the webpage and reinventing the hierarchy to make the education section stand out more for users, encouraging further exploration.
+            </p>
+            <div id = "rabbitats-improvement-A" class = "image-with-frame">
+              <img src="resources/rabbitats/rabbitats-finalized-improvements-A.png" alt="first improrvement"></img>
+            </div>
+          </div>
         </div>
-        <img id = "rabbitats-improvement-A" src="resources/rabbitats/rabbitats-finalized-improvements-A.png" alt="first improrvement"></img>
       </div>
 
       <!-- second improvement-->
       <div id = "rabbitats-second-improvement">
         <div class = "numbered-title-section">
           <span class="number-title">02</span>
-          <h2>Organizing the education materials on the page to make information easily accessible and well-structured.</h2>
-        </div>
-
-        <div id="rabbitats-improvement-B">
           <div>
-            <video class = "rabbitats-improvement-B-video" controls autoplay>
-              <source src="resources/rabbitats/rabbitats - education categorization.mov" type="video/mp4">
-            </video>
+            <h2>Reorganized education material </h2>
             <p>
               The educational content has also been organized into well laided out segments for users to navigate through. This design allows
               the user to find the precise information they are looking for.
             </p>
+            <div id="rabbitats-improvement-B">
+              <video class = "rabbitats-improvement-B-video" controls autoplay>
+                <source src="resources/rabbitats/rabbitats - education categorization.mov" type="video/mp4">
+              </video>
+            </div>
+          </div>
+
           </div>
         </div>
+
       </div>
     </section>
 
