--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -139,7 +139,7 @@
         </div>
         <div class = "image-with-caption">
           <img src="resources/wealthsimple/wealthsimple-questionnaire.png" alt="screenshot of some of the questionnaire questions"></img>
-          <figcaption>Screenshot of some of our questionnaire questions</figcaption>
+          <figcaption>Screenshot of some of our questionnaire questions.</figcaption>
         </div>
       </div>
 
@@ -153,15 +153,15 @@
       <div id = "wealthsimple-design-platform" class = "grid-area sub-section">
         <div>
           <h2>Wealthsimple: Our Design Platform</h2>
-          <p>To best tackle this problem, I advocated for exploring existing investment related platforms as points of intervention over 
+          <p>To best tackle this problem, I <strong>advocated for exploring existing investment related platforms as points of intervention</strong> over 
             designing a new platform, and consequently finalized Wealthsimple as our design platform.</p>
-          <p>Wealthsimple is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
+          <p><strong>Wealthsimple</strong> is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
             financial freedom. It was a popular platform referenced within our questionnaire responses. Online consensus gathered from 
             initial research also indicates Wealthsimple as a popular starting point for investing among youth.</p>
         </div>
         <div class = "image-with-caption">
           <img src="resources/wealthsimple/wealthsimple-logo.png" alt="wealthsimple's logo"></img>
-          <figcaption>Wealthsimple's Logo</figcaption>
+          <figcaption>Wealthsimple's Logo.</figcaption>
         </div>
       </div>
     </section>
@@ -199,20 +199,23 @@
           <div>
             <h2>High Cognitive Demand</h2>
             <p>
-              Research from other team members have concluded that processing new information leads to a cognitive load on the learner which can contributes towards poorer decision-making specifically with risk analysis, and increased ability to absorb new information. 
+              Research from other team members have concluded that processing new information leads to a cognitive load on the learner which can contributes 
+              towards poorer decision-making specifically with risk analysis, and increased ability to absorb new information. 
             </p>
             <p>
-              With this in mind, our investigation into new user perspectives of Wealthsimple’s interface suggested that it is overwhelming beginner users with plentiful of unknown numbers, terms, and acronyms which heavily strains working memory. 
+              With this in mind, our investigation into new user perspectives of Wealthsimple’s interface suggested that it is overwhelming beginner users with 
+              <strong>plentiful of unknown numbers, terms, and acronyms which heavily strains working memory.</strong> 
             </p>
             <p>
-              Moreover, I’ve also noted that the Wealthsimple interface have done little in terms of cues that can help direct users, or help with information understanding. 
+              Moreover, I’ve also noted that the Wealthsimple interface have <strong>done little in terms of cues</strong> that can help direct users, or help with information 
+              understanding. 
             </p>
           </div>
         </div>
         <!--right-->
         <div class = "image-with-caption">
           <img src="resources/wealthsimple/wealthsimple cognitive demand image.png" alt="Screenshot of the Wealthsimple app, of elements that are over complex for new users"></img>
-          <figcaption>Screenshots of the Wealthsimple app, areas where excessive display of investment specific terms can result in cognitive overload</figcaption>
+          <figcaption>Screenshots of the Wealthsimple app, areas where excessive display of investment specific terms can result in cognitive overload.</figcaption>
         </div>
       </div>
 
@@ -228,8 +231,8 @@
           <div>
             <h2>Unfamiliarity of Mental Models</h2>
           <p>
-            Following up on my research of mental model theories, investing as a concept appears to lack concrete connection with any existing
-            physical phenomenon, as it is a digital concept. This combined with a general unfamiliarity of investing among youth makes 
+            Following up on my research of mental model theories, investing as a concept appears to <strong>lack concrete connection with any existing
+            physical phenomenon, as it is a digital concept</strong>. This combined with a general unfamiliarity of investing among youth makes 
             existing mental models, such as portfolio as personal assets and interactive graphs, abstract and disconnecting for young, 
             new investors. 
           </p>
@@ -249,9 +252,9 @@
                 environment (interface) to ease the cognitive burden. 
               </p>
               <p>
-                However, Investing as a process is quite individual oriented with social collaboration being largely absent due to investing’s
-                private nature. Additionally, investing as a whole, including Wealthsimple, suffers from a fragmented environment where 
-                investors need to evaluate multiple external representations such as online forums, videos, financial news, and more to make 
+                However, Investing as a process is quite <strong>individual oriented</strong> with social collaboration being largely absent due to investing’s
+                private nature. Additionally, investing suffers from a <strong>fragmented environment</strong> where 
+                investors need to evaluate a large number of external representations such as online forums, videos, financial news, and more to make 
                 an educated decision.
               </p>
             </div>
@@ -279,7 +282,7 @@
                 effective instruments for helping users to process information and make decisions.
               </p>
               <p>
-                Not only are they few and far between, existing visual representations are lacking in visual support and forms of interaction.
+                Not only are they few and far between, existing visual representations are <strong>lacking in visual support and forms of interaction.</strong>
               </p>
             </div>
           </div> 
@@ -298,6 +301,13 @@
     <section id = "finalized-design-proposals">
       <h1>Finalized Redesign Proposals</h1>
 
+      <div class = "highlight-area sub-section">
+        <p>
+          With the research insights and intervention goals, we proposed a number of redesigns and new features that can help tackle the problem space. 
+          For myself, I’ve proposed the 4 following changes and designed mockups for them.
+        </p>
+      </div>
+
       <!-- first feature-->
       <div id = "wealthsimple-first-solution" class="sub-section">
         <div class = "wealthsimple-solution-content grid-area">
@@ -306,7 +316,7 @@
             <h2>Cues for Improved Understanding</h2>
           </div>
           <p>
-            Addition of cues in a number of forms across the entire interface that communicates more information that would support them 
+            Addition of cues in a number of forms across the entire interface that <strong>communicates more information</strong> that would support them 
             in navigating through the investing process and in making decisions. 
           </p>
         </div>
@@ -332,9 +342,9 @@
             <h2>Improved Interactable Portfolio Holdings</h2>
           </div>
           <p>
-            I’ve also advocated for transforming the portfolio holdings screen from a simple list into a visualized and 
-            interactable pie chart, a more accurate and recognizable form of representation that organized information into clear 
-            categories. Users can also choose between different methods of categorization or switch back to
+            I’ve also advocated for transforming the portfolio holdings screen from a simple list into a <strong>visualized and 
+            interactable pie chart</strong>, a more accurate and recognizable form of representation that organized information into <strong>clear 
+            categories</strong>. Users can also choose between different methods of categorization or switch back to
             the classic list view via a toggle.
           </p>
         </div>
@@ -365,8 +375,8 @@
           </div>
           <p>
             To allow collaboration between different users to offload the mental load, I also proposed an optional community based feature 
-            that allows users to share their own portfolios and receive collaborative feedback through likes, Q&As, and other user comments.
-             Users can also view other shared portfolios and ask questions as an information source.
+            that allows users to <strong>share their own portfolios</strong> and receive collaborative feedback through likes, Q&As, and other user comments.
+             Users can also view other shared portfolios and ask questions as an <strong>information source.</strong>
           </p>
         </div>
 
@@ -396,7 +406,7 @@
           </div>
           <p>
             I also redesigned Wealthsimple’s performance chart to communicate more information through visuals in a digestible manner. 
-            I’ve added more relevant data visualization and supporting elements to help with understanding.
+            I’ve added more <strong>relevant data visualization and supporting elements</strong> to help with understanding.
           </p>
         </div>
 
@@ -423,7 +433,7 @@
         <p>
           For my design proposals that aims to ease investment learning curve and provide additional tools to support users during the 
           investment process, all solutions are evidence based, and results of extensive research of peer reviewed research. When 
-          design is based on well founded research and concrete evidence, and not simply subjective assumptions, they become far more 
+          design is <strong>based on well founded research and concrete evidence</strong>, and not simply subjective assumptions, they become far more 
           justifiable.
         </p>
       </div>
