--- a/craftconnect.html
+++ b/craftconnect.html
@@ -24,7 +24,7 @@
           <h2 id="logo"><a href="index.html"><em>Howard</em> Chang</a></h2>
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
-            <a href="index.html">About</a>
+            <a href="about.html">About</a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
           </div>
         </nav>
