Buttons, spacing, consistency

--- a/about.html
+++ b/about.html
@@ -200,6 +200,12 @@
       </div>
       
     </section>
+
+    <section>
+      <button class="button" onclick="location.href='index.html#projects'">
+        &larr; See my work!
+      </button>
+    </section>
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
