--- a/craftconnect.html
+++ b/craftconnect.html
@@ -361,6 +361,12 @@
         effectiveness of the finalized direction. As design as this project have proven, is a <strong>continuous iterative process.</strong>
       </p>
     </section>
+
+    <section>
+      <button class="button" onclick="location.href='index.html#projects'">
+        &larr; See my other work!
+      </button>
+    </section>
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
