--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   </head>
 
@@ -138,7 +138,7 @@
             <a class = "social-logo" id="facebook-logo" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
           </div>
           <div id = "footer-divider-right">
-            <p>Designed and Coded by Howard Chang</p>
+            <p>Designed and Coded by<strong> Howard Chang</strong></p>
           </div>
         </div>
       </div>
