--- a/rabbitats.html
+++ b/rabbitats.html
@@ -351,6 +351,12 @@
          surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
       </p>
     </section>
+
+    <section>
+      <button class="button" onclick="location.href='index.html#projects'">
+        &larr; See my other work!
+      </button>
+    </section>
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
