--- a/closetshare.html
+++ b/closetshare.html
@@ -438,6 +438,12 @@
    
   </section>
 
+  <section>
+    <button class="button" onclick="location.href='index.html#projects'">
+      &larr; See my other work!
+    </button>
+  </section>
+
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
