--- a/macaron.html
+++ b/macaron.html
@@ -319,6 +319,12 @@
         documented codebase was essential to ensure smooth development and effective collaboration.
       </p>
     </section>
+
+    <section>
+      <button class="button" onclick="location.href='index.html#projects'">
+        &larr; See my other work!
+      </button>
+    </section>
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
