--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -447,6 +447,12 @@
         </p>
       </div>
     </section>
+
+    <section>
+      <button class="button" onclick="location.href='index.html#projects'">
+        &larr; See my other work!
+      </button>
+    </section>
   </div>
 
   <!--------------------------FOOTER //-------------------------------------------------->
