updated header/footer for all pages, + replaced facebook with github

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
             <a href="about.html">About</a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Resume</a>
           </div>
         </nav>
       </div>
@@ -34,7 +34,7 @@
       <div id = "side-bar-logo-list">
         <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
         <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-        <a class = "social-logo" id="facebook-logo-side" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+        <a class = "social-logo" id="github-logo-side" href="https://github.com/hcbddhc"></a> 
       </div>
       <div class = "side-bar-line"></div>
     </div>
@@ -135,7 +135,7 @@
           <div id = "footer-divider-left">
             <a class = "social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
             <a class = "social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-            <a class = "social-logo" id="facebook-logo" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+            <a class = "social-logo" id="github-logo" href="https://github.com/hcbddhc"></a> 
           </div>
           <div id = "footer-divider-right">
             <p>Designed and Coded by<strong> Howard Chang</strong></p>
