--- a/rabbitats.html
+++ b/rabbitats.html
@@ -25,7 +25,7 @@
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
             <a href="about.html">About</a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Resume</a>
           </div>
         </nav>
       </div>
@@ -37,7 +37,7 @@
     <div id = "side-bar-logo-list">
       <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
       <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-      <a class = "social-logo" id="facebook-logo-side" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+      <a class = "social-logo" id="github-logo-side" href="https://github.com/hcbddhc"></a> 
     </div>
     <div class = "side-bar-line"></div>
   </div>
@@ -361,21 +361,23 @@
 
   <!--------------------------FOOTER //-------------------------------------------------->
   <footer>
+
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
-      <h4> howardchang822@hotmail.com <em>|</em> 778-822-6068 </h4>
+      <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
         <div id = "footer-divider-left">
           <a class = "social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
           <a class = "social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-          <a class = "social-logo" id="facebook-logo" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+          <a class = "social-logo" id="github-logo" href="https://github.com/hcbddhc"></a> 
         </div>
         <div id = "footer-divider-right">
-          <p>Designed by Howard Chang</p>
+          <p>Designed and Coded by<strong> Howard Chang</strong></p>
         </div>
       </div>
     </div>
+
   </footer>
 
   </body>
