--- a/craftconnect.html
+++ b/craftconnect.html
@@ -130,13 +130,20 @@
           <figcaption> CraftConnect’s interactive booth page, includes detailed information about an artisan, with many other interactive elements on screen. </figcaption>
         </div>
       </div>
-      <div class = "highlight-area">
+      <div>
         <p>
           The platform was created after four months of <strong>research, interviews, and continuous iterations</strong> with a team of four. With the initial objective to resolve 
           the high difficulty for handcraft artisans to transform their craft into a successful business, we later directed our design focus to be <strong>establishing an
            effective process for facilitating customer awareness of local artisans, and fostering meaningful connections.</strong> Consequently, CraftConnect is our 
            solution to this design focus.
         </p>
+      </div>
+
+      <div id = "craftconnect-share-prototype" class = "grid-area highlight-area ">
+        <h2>Check out the project!</h2>
+        <div>
+          <button class = "button" onclick="toCraftconnectPrototype()"> Figma Prototype</button>
+        </div>
       </div>
 
     </section>
