Fixed bug with rabbitat mobile overview

--- a/rabbitats.html
+++ b/rabbitats.html
@@ -127,11 +127,11 @@
         </div>
       </div>
 
-      <div id = "rabbitats-mobile-preview">
+      <div id = "rabbitats-mobile-preview" class = "sub-section">
         <h2>
           <span class="number-title">02</span> <span>Mobile Version Preview</span>
         </h2>
-        <div  class = "flex-area">
+        <div id = "rabbitats-mobile-preview-images" class = "grid-area">
           <img class = "image-with-frame rabbitats-mobile-preview-element" src="resources/rabbitats/rabbitats-mobile-preview-A.png" alt="mobile preview"></img>
           <img class = "image-with-frame rabbitats-mobile-preview-element" src="resources/rabbitats/rabbitats-mobile-preview-B.png" alt="mobile preview"></img>
           <img class = "image-with-frame rabbitats-mobile-preview-element" src="resources/rabbitats/rabbitats-mobile-preview-C.png" alt="mobile preview"></img>
